kubernetes/kube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baljan
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: baljan-blipp
  name: baljan-blipp
  namespace: baljan
spec:
  replicas: 1
  selector:
    matchLabels:
      run: baljan-blipp
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: baljan-blipp
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: baljan-config
        image: gcr.io/sektionscafe-baljan/github-baljan-baljans-balla-blipp:latest
        imagePullPolicy: Always
        name: baljan-blipp
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: cafesys-celery-beat
  name: cafesys-celery-beat
  namespace: baljan
spec:
  replicas: 1
  selector:
    matchLabels:
      run: cafesys-celery-beat
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: cafesys-celery-beat
    spec:
      containers:
      - command:
        - /app/bin/run-celery-beat
        image: gcr.io/sektionscafe-baljan/github-baljan-cafesys:latest
        imagePullPolicy: Always
        name: cafesys-celery-beat
        ports:
        - containerPort: 80
          protocol: TCP
      - command:
        - /cloud_sql_proxy
        - -instances=sektionscafe-baljan:europe-west1:baljan-db=tcp:3306
        - -credential_file=/secrets/cloudsql/Baljan-6a5cb68f99a2.json
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        name: cloudsql-proxy
        volumeMounts:
        - mountPath: /secrets/cloudsql
          name: cloudsql-instance-credentials
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: cafesys-celery-worker
  name: cafesys-celery-worker
  namespace: baljan
spec:
  replicas: 1
  selector:
    matchLabels:
      run: cafesys-celery-worker
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: cafesys-celery-worker
    spec:
      containers:
      - command:
        - /app/bin/run-celery-worker
        image: gcr.io/sektionscafe-baljan/github-baljan-cafesys:latest
        imagePullPolicy: Always
        name: cafesys-celery-worker
        ports:
        - containerPort: 80
          protocol: TCP
      - command:
        - /cloud_sql_proxy
        - -instances=sektionscafe-baljan:europe-west1:baljan-db=tcp:3306
        - -credential_file=/secrets/cloudsql/Baljan-6a5cb68f99a2.json
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        name: cloudsql-proxy
        volumeMounts:
        - mountPath: /secrets/cloudsql
          name: cloudsql-instance-credentials
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: cafesys-django
  name: cafesys-django
  namespace: baljan
spec:
  replicas: 1
  selector:
    matchLabels:
      run: cafesys-django
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: cafesys-django
    spec:
      containers:
      - env:
        - name: VIRTUAL_HOST
          value: baljan.org,beta.baljan.org,www.baljan.org
        image: gcr.io/sektionscafe-baljan/github-baljan-cafesys:latest
        imagePullPolicy: Always
        name: cafesys-django
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      - command:
        - /cloud_sql_proxy
        - -instances=sektionscafe-baljan:europe-west1:baljan-db=tcp:3306
        - -credential_file=/secrets/cloudsql/Baljan-6a5cb68f99a2.json
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        name: cloudsql-proxy
        volumeMounts:
        - mountPath: /secrets/cloudsql
          name: cloudsql-instance-credentials
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: postgres
  name: postgres
  namespace: baljan
spec:
  replicas: 1
  selector:
    matchLabels:
      run: postgres
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: postgres
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: baljan-config
        image: postgres:9.6-alpine
        imagePullPolicy: IfNotPresent
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: redis
  name: redis
  namespace: baljan
spec:
  replicas: 1
  selector:
    matchLabels:
      run: redis
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: baljan-config
        image: redis:3-alpine
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: gke-static-ip
  name: gke-static-ip
  namespace: baljan
spec:
  replicas: 1
  selector:
    matchLabels:
      run: gke-static-ip
  template:
    metadata:
      labels:
        run: gke-static-ip
    spec:
      containers:
      - env:
        - name: INSTANCE_PREFIX
          value: gke-cluster-
        - name: INSTANCE_ZONE
          value: europe-west1-b
        - name: STATIC_IP
          value: 130.211.53.236
        image: gcr.io/sektionscafe-baljan/github_baljan_gke-static-ip:latest
        imagePullPolicy: Always
        name: gke-static-ip
        livenessProbe:
          exec:
            command:
            - /app/check.sh
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: baljan
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    run: redis
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: baljan
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    run: postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: cafesys-django
  namespace: baljan
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: cafesys-django
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: baljan-blipp
  namespace: baljan
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: baljan-blipp
  type: ClusterIP
