kubernetes/traefik.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik-ingress-controller
  namespace: baljan
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
      name: traefik-ingress-lb
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      containers:
      - args:
        - --configfile=/config/traefik.toml
        - --web
        - --kubernetes
        - --logLevel=DEBUG
        image: traefik
        imagePullPolicy: Always
        name: traefik-ingress-lb
        ports:
        - containerPort: 80
          hostPort: 80
          protocol: TCP
        - containerPort: 443
          hostPort: 443
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /acme
          name: acme
      hostNetwork: true
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
      - name: acme
        persistentVolumeClaim:
          claimName: nginx-pv-claim
      - configMap:
          name: traefik-conf
        name: config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: baljan-ingress
  namespace: baljan
spec:
  rules:
  - host: blipp.baljan.org
    http:
      paths:
      - backend:
          serviceName: baljan-blipp
          servicePort: 80
  - host: baljan.org
    http:
      paths:
      - backend:
          serviceName: cafesys-django
          servicePort: 80
  - host: www.baljan.org
    http:
      paths:
      - backend:
          serviceName: cafesys-django
          servicePort: 80
